force-app/main/default/objects/LogInterfaceItem__c/LogInterfaceItem__c.object-meta.xml
<CustomObject>
    <label>Log Interface Item</label>
    <nameField>
        <displayFormat>LI - {00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Interface Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>