force-app/main/default/objects/LogInterfaceItem__c/fields/FailDescription__c.field-meta.xml
<CustomField>
    <fullName>FailDescription__c</fullName>
    <label>Descrição da Falha</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>