force-app/main/default/objects/LogInterfaceItem__c/fields/LogInterface__c.field-meta.xml
<CustomField>
    <fullName>LogInterface__c</fullName>
    <label>Log Interface</label>
    <referenceTo>LogInterface__c</referenceTo>
    <relationshipLabel>Log Interface Items</relationshipLabel>
    <relationshipName>LogInterfaceItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>