force-app/main/default/objects/LogInterfaceItem__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Campo com a mensagem completa, usada para log de requests/responses</description>
    <label>Mensagem</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>