force-app/main/default/objects/LogInterfaceItem__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Código do Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>